--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -124,7 +124,7 @@
             .chart-wrapper {
         display: flex;                      /* Use flexbox to align charts in a row */
         flex-wrap: wrap;                   /* Allow wrapping for smaller screens */
-        justify-content: center;            /* Center the charts */
+        justify-content: left;            /* Center the charts */
         margin: 20px 0;                    /* Add margin around the charts */
     }
 
