--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -182,6 +182,7 @@
                         <img src="{{ qr_code_url }}" alt="QR Code">
                     </a>
                     <div class="url">
+                        <strong>Direct Redirect:</strong> <a href="{{ code[2] }}" target="_blank">{{ code[2] }}</a><br>                
                         <strong>App Store URL:</strong> <a href="{{ code[3] }}" target="_blank">{{ code[3] }}</a><br>
                         <strong>Play Store URL:</strong> <a href="{{ code[4] }}" target="_blank">{{ code[4] }}</a>
                     </div>
