--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -177,6 +177,17 @@
         </div>      
     </nav>
 
+
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul class="flashes">
+        {% for message in messages %}
+        <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
+
     <h1>AppLinkr - QR Codes for AppStores</h1>
 
     <!-- Tab Container -->
@@ -261,5 +272,7 @@
             event.target.classList.add('active');
         }
     </script>
+
+
 </body>
 </html>
