--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -161,6 +161,16 @@
         </div>      
     </nav>
 
+    {% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class="flashes">
+      {% for message in messages %}
+        <li>{{ message }}</li>
+      {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
+
     <h1>QR Code Statistics</h1>
 
     {% if not session.get('authenticated') %}
@@ -217,5 +227,8 @@
             }
         }
     </script>
+
+
+
 </body>
 </html>
