--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -16,7 +16,7 @@
 
         h1 {
             text-align: center;
-            color: #007bff;
+            color: white;
         }
 
         
@@ -121,39 +121,13 @@
         }
 
 
-            .chart-wrapper {
-        display: flex;                      /* Use flexbox to align charts in a row */
-        flex-wrap: wrap;                   /* Allow wrapping for smaller screens */
-        justify-content: left;            /* Center the charts */
-        margin: 20px 0;                    /* Add margin around the charts */
-    }
-
-    .chart-container {
-        flex: 0 1 200px;                   /* Each chart has a base width of 200px */
-        height: 150px;                     /* Set a fixed height for the charts */
-        margin: 10px;                      /* Add margin between charts */
-        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Optional: add shadow for better look */
-        background: white;                 /* Optional: background color */
-        border-radius: 8px;               /* Optional: rounded corners */
-        overflow: hidden;                  /* Hide overflow */
-        display: flex;                     /* Use flexbox inside container */
-        align-items: baseline;               
-        justify-content: left;          
-    }
-
-    canvas {
-        width: 100% !important;            /* Ensure canvas is full width */
-        height: 100% !important;           /* Ensure canvas is full height */
-    }
-
-
-
     </style>
 </head>
 <body>
     <!-- Navigation bar -->
     <nav>
         <div class="menu-icon" onclick="toggleMenu()">☰</div>
+        <h1>AppLinkr</h1>
         <div class="menu">
             <a href="{{ url_for('index') }}">QR Generator</a>
             <a href="{{ url_for('admin') }}">Admin</a>
