--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -4,124 +4,9 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>AppLinkr - Code Statistics</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #f0f0f0;
-            color: #333;
-        }
 
-        h1 {
-            text-align: center;
-            color: white;
-        }
-
-        
-        .menu-icon {
-            display: none; 
-            font-size: 24px;
-            cursor: pointer;
-        }
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: #007bff;
-            padding: 10px;
-            position: relative;
-      
-        }
-        nav a {
-            color: white;
-            text-decoration: none;
-            padding: 10px;
-        }
-        
-        nav a:hover {
-            background-color: #0056b3;
-            border-radius: 4px;
-        }
-        .menu {
-            display: flex;
-            gap: 20px;
-            
-        }
-        .menu-icon {
-            display: none; 
-            font-size: 24px;
-            cursor: pointer;
-        }
-        @media (max-width: 768px) {
-            .menu {
-                display: none; 
-                flex-direction: column;
-                gap: 10px;
-                position:relative;
-                background-color: #007bff; 
-                width: 100%; 
-                z-index: 1000; 
-                padding: 10px 0; 
-            }
-            .menu.active {
-                display: flex; 
-            }
-            .menu-icon {
-                display: block; 
-            }
-        }
-
-        .card {
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            margin: 10px 0;
-            padding: 20px;
-            transition: transform 0.2s;
-        }
-
-        .card:hover {
-            transform: scale(1.02);
-        }
-
-        .card-title {
-            font-weight: bold;
-            margin-bottom: 10px;
-        }
-
-        .card-content {
-            margin-bottom: 15px;
-        }
-
-        .card img {
-            max-width: 100px;
-            height: auto;
-            border-radius: 4px;
-        }
-
-        .url {
-            word-wrap: break-word;
-            margin: 10px 0;
-        }
-
-        .delete-button {
-            background-color: #dc3545; 
-            color: white;
-            border: none;
-            cursor: pointer;
-            padding: 10px 15px;
-            border-radius: 4px;
-            transition: background-color 0.3s;
-        }
-
-        .delete-button:hover {
-            background-color: #c82333;
-        }
-
-
-    </style>
 </head>
 <body>
     <!-- Navigation bar -->
