--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,7 @@
    
 </head>
 <body>
-
+    <div class="wrapper">
     <!-- Navigation bar -->
     <nav>
         <div class="menu-icon" onclick="toggleMenu()">☰</div>
@@ -75,6 +75,7 @@
             <button class="copy-button" onclick="copyToClipboard()">Copy to Clipboard</button>
         </div>
     </div>
+</div>
     {% endif %}
     
     <script>
