--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -12,7 +12,7 @@ body {
 
 .wrapper {
     max-width: 800px; 
-    width: 100%; 
+    margin: auto;
     padding: 20px; 
     background-color: white; 
     border-radius: 8px; 
